# copia

./: .clippy.toml  .gitignore  .gitmessage  .pmat-gates.toml  .pmat-metrics.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HYPOTHESES.md  Makefile  README.md  deny.toml  flake.nix
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: bench.yml  ci.yml  nightly.yml  release.yml
.pv/: lint-previous.json
benches/: benchmarks.rs  rsync_comparison.rs  sync_throughput.rs
contracts/: bidirectional-sync-v1.yaml  binding.yaml  delta-sync-v1.yaml  hash-integrity-v1.yaml  hub-protocol-v1.yaml  incremental-sync-v1.yaml  local-to-local-recursive-v1.yaml  path-safety-v1.yaml  recursive-push-v1.yaml  recursive-remote-pull-v1.yaml  single-file-sync-roundtrip-v1.yaml  streaming-transfer-v1.yaml
contracts/.pv/cache/lint/: 0d7cfec90eb453b4.json  befbb9cf34b91023.json
docs/: architecture.md  proofs.md  usage.md
docs/adr/: ADR-001-algorithm-choices.md  ADR-002-protocol-design.md  ADR-003-tracing-integration.md
docs/specifications/: distributed-sync.md  rsync-copia-spec.md
examples/: sync_files.rs
lean/: BidirectionalReconcile.lean  HubCas.lean  IncrementalSync.lean
proptest-regressions/: sync.txt
scripts/: dogfood-use.sh
src/: async_sync.rs  checksum.rs  delta.rs  error.rs  hash.rs  lib.rs  protocol.rs  signature.rs  sync.rs  trace_output.rs
tests/: contract_falsification.rs  contract_traits.rs  e2e_bidir.rs  e2e_hub.rs  e2e_ssh.rs  integration_all.rs  integration_tests.rs  tracing_tests.rs
