[package]
name = "copia"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Pragmatic AI Labs <info@paiml.com>"]
description = "Pure Rust rsync-style delta synchronization library"
license = "MIT"
repository = "https://github.com/paiml/copia"
homepage = "https://github.com/paiml/copia"
documentation = "https://docs.rs/copia"
readme = "README.md"
keywords = ["rsync", "sync", "delta", "file-transfer", "backup"]
categories = ["filesystem", "compression", "algorithms"]
exclude = [
    "benches/*",
    "tests/*",
    "docs/*",
    ".github/*",
    "mutants.out/*",
    "mutants.out.old/*",
    "proptest-regressions/*",
    "Makefile",
]

[dependencies]
# Core dependencies
blake3 = "1.5"
thiserror = "2"
bytes = "1.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Performance optimizations
rayon = "1.10"
rustc-hash = "2.1"

# Optional async support
tokio = { version = "1.43", features = ["rt", "io-util", "fs", "sync"], optional = true }

# Optional CLI
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
rand = "0.8"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "io-util", "fs"] }

[features]
default = []
async = ["tokio"]
cli = ["clap", "async", "tokio/rt-multi-thread", "tokio/macros", "tokio/process"]

[[bin]]
name = "copia"
path = "src/bin/copia.rs"
required-features = ["cli"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cognitive_complexity = "warn"
missing_const_for_fn = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "rsync_comparison"
harness = false
required-features = ["async"]
